Fixing whitespaces on the edges on mobile portrait mode

--- a/client/src/assets/images.css
+++ b/client/src/assets/images.css
@@ -10,3 +10,7 @@ body, html {
   margin: 0 auto;
   overflow-x: hidden;
 }
+
+* {
+  overflow-x: hidden !important;
+}
